fixed some of the no items conditions and delete items spacing

--- a/frontend/src/components/_tools/ScoreKeeper/BoardManager/BoardManager.module.css
+++ b/frontend/src/components/_tools/ScoreKeeper/BoardManager/BoardManager.module.css
@@ -10,6 +10,11 @@
     margin:2rem 0;
 }
 
+.emptyText{
+    width:100%;
+    text-align:center;
+}
+
 .button {
     all: unset;
     cursor:pointer;
