--- a/frontend/src/components/_tools/ScoreKeeper/BoardPreview/BoardPreview.module.css
+++ b/frontend/src/components/_tools/ScoreKeeper/BoardPreview/BoardPreview.module.css
@@ -41,7 +41,10 @@
     overflow-y:auto;
     border: var(--border-inside);;
 }
-
+.emptyText{
+    align-self:center;
+    color: var(--color-subtext);
+}
 
 .color{
     height: 20px;
