--- a/frontend/src/components/_tools/ScoreKeeper/DeleteItems/DeleteItems.module.css
+++ b/frontend/src/components/_tools/ScoreKeeper/DeleteItems/DeleteItems.module.css
@@ -22,16 +22,21 @@
     padding:1rem;
 }
 
-.deletePlayerContainer{
-    padding:1rem;
+.deleteContainer{
+    display:flex;
+    flex-direction:column;
+    gap:1.5rem;
+    align-self:center;
+    padding:1.5rem;
     max-height:250px;
     overflow-y:scroll;
     border: var(--border-inside);
 }
 
-.deletePlayerItem{
+.deleteItem{
     display:flex;
     justify-content:space-between;
+    gap:1rem;
     width:100%;
 }
 
@@ -47,8 +52,9 @@
     fill:var(--color-red);
 }
 
-.centerText{
+.emptyText{
     text-align:center;
+    color: var(--color-subtext);
 }
 
 .cancelButton{
