--- a/frontend/src/components/_tools/ScoreKeeper/PlayerScore/PlayerScore.module.css
+++ b/frontend/src/components/_tools/ScoreKeeper/PlayerScore/PlayerScore.module.css
@@ -30,7 +30,7 @@
     text-align:center;
     font-weight:bold;
     font-family: var(--ff);
-    font-size: 36px;
+    font-size: 32px;
 }
 
 .colorInput{
