--- a/frontend/src/components/_tools/ScoreKeeper/ScoreBoard/ScoreBoard.module.css
+++ b/frontend/src/components/_tools/ScoreKeeper/ScoreBoard/ScoreBoard.module.css
@@ -10,6 +10,11 @@
     margin:2rem 0;
 }
 
+.emptyText{
+    width: 100%;
+    text-align:center;
+}
+
 .leftNav{
     display:flex;
     gap:1rem;
